fix top nav deck item alignment

--- a/assets/css/component/menu.css
+++ b/assets/css/component/menu.css
@@ -61,8 +61,9 @@ body > header > nav {
 }
 
 .menu-icon::before {
-    content: '\e90b';
+    padding: 1pt;
     font-family: 'base-ui';
+    content: '\e90b';
 }
 
 #has-more-menu > summary {
@@ -290,6 +291,9 @@ a#has-i18n:active > .alt {
     gap: 1ex;
 }
 
+.iso639 {
+    padding-top: 1pt;
+}
 
 #has-l10n .on-plank {
     position: absolute;
